--- a/5.1.Uso_i3.md
+++ b/5.1.Uso_i3.md
@@ -1,8 +1,8 @@
-# Impresora I3
+# Impresora Prusa i3
+
+Vamos a poner en práctica lo visto en una impresora Prusa i3 más o menos estándar.
 
 ## Calibración
-
-La calibración es el proceso por el conseguimos que la boquilla del extrusor está nivelada con la base, consiguiendo que mantenga la misma distancia con esta en todos los puntos.
 
 Para comprobarlo hacemos lo siguiente:
 
@@ -15,7 +15,7 @@ Para comprobarlo hacemos lo siguiente:
 * Ahora liberamos los motores con la opción Preparar -> Apagar Motores y movemos el extrusor y la base para comprobar que la nivelación es igual en las 4 esquinas.
 * Si vemos que necesitamos mover toda la base ajustaremos el tornillo que tenemos a la izquierda y que presiona el final de interruptor (final de carrera). Girando el tornillo en sentido horario bajamos la boquilla
 
-![Tornillo calibración](./images/Calibracion.png)
+![Tornillo de calibración](./images/Calibracion.png)
 
 ![Ajustando la nivelación del eje Z](./images/NivelandoZ_2.png)
 
@@ -23,7 +23,7 @@ Para comprobarlo hacemos lo siguiente:
 
 [Vídeo: Calibración eje Z de una impresora Prusa i3](https://youtu.be/CARIvKaBPZI)
 
-* Si vemos que algunas de las esquinas ajustan mejor que otras, podemos ajustarlas individualmente.
+* Si vemos que el ajuste es mejor en algunas de las esquina, podemos ajustarlas individualmente.
 * Un caso especial es cuando vemos que es el eje X, donde está el extrusor el que está inclinado. Esto ocurre por el uso o por un golpe o por diferencias entre los motores del eje Z. En este caso, con la impresora apagada, podemos hacer girar los motores del eje z manualmente.
 
 [![Vídeo: Ajuste de la nivelación del Eje X de una impresora 3D](https://img.youtube.com/vi/WTcrb49kiZE/0.jpg)](https://youtu.be/WTcrb49kiZE)
@@ -33,7 +33,7 @@ Para comprobarlo hacemos lo siguiente:
 
 ## Menús de la impresora
 
-Vamos a ver las opciones del menú más normales de las impresoras del tipo Prusa i3 (basadas en el firmware más usual Marlin)
+Vamos a ver las opciones del menú más normales de las impresoras del tipo Prusa i3 (basadas en el firmware más usual: Marlin)
 
 Tenemos los siguientes menús:
 
@@ -52,15 +52,17 @@ Tenemos los siguientes menús:
 
 ## Configuración de Ultimaker Cura para Prusa i3
 
+Para configurar Cura haremos como cuando no está nuestro modelo de impresora:
+
 1. En el menú Ajustes -> Impresoras seleccionamos Agregar Impresora
 1. Seleccionamos "Agregar impresora fuera de red"
 1. Seleccionamos Custom 
 1. Seleccionamos Custom FFF
 1. Ponemos el nombre y pulsamos Agregar
 1. Configuramos el tamaño de la base y la altura (normalmente 200x200x200) y marcamos "Plataforma calentada"
-![](./images/configI3Cura.png)
-1. En las opciones del extrusor marcamos el diámetro del filamento y el tamaño de la boquilla (normalmente 0.4)
-![](./images/Configi3ExtrusorCura.png)
+![Añadir impresora personalizada en Cura](./images/configI3Cura.png)
+1. En las opciones del extrusor marcamos el diámetro del filamento (puede ser 2.85 o 1.75mm) y el tamaño de la boquilla (normalmente 0.4)
+![Configuramos los parámetros del extrusor](./images/Configi3ExtrusorCura.png)
 
 
 [![Vídeo: Configuración del laminador Ultimaker Cura para impresora Prusa i3](https://img.youtube.com/vi/_EcSV2h06xU/0.jpg)](https://youtu.be/_EcSV2h06xU)
@@ -91,7 +93,7 @@ Ya tenemos todo listo para imprimir, sólo tenemos que:
 
 [Vídeo: Primera impresión 3D](https://youtu.be/Y-zoJGRWiu8)
 
-Durante el proceso de impresión podemos modificar algunos parámetros y también podemos pausarlo o detenerlo definitivamente:
+Durante el proceso de impresión podemos modificar algunos parámetros y también podemos pausarlo o detenerlo definitivamente.
 
 [![Vídeo: Opciones de menú  durante la impresión (Prusa i3 Marlin)](https://img.youtube.com/vi/RRnPeZw8GHQ/0.jpg)](https://youtu.be/RRnPeZw8GHQ)
 
@@ -102,9 +104,13 @@ Si todo va bien, la pieza se irá formando
 
 [![Vídeo: Imprimiendo](https://img.youtube.com/vi/oqyA0dr9AOY/0.jpg)](https://youtu.be/oqyA0dr9AOY)
 
+[Vídeo: Imprimiendo](https://youtu.be/oqyA0dr9AOY)
+
 ![Cubo de calibración](./images/Cubo3D_s.jpg)
 
 ## Cambio de filamento
+
+El procedimiento es bastante estándar:
 
 1. Calentamos el extrusor hasta la temperatura correcta del filamento actual
 1. Soltamos los tornillos del extrusor que hacen presión en el filamento (idler)
@@ -115,10 +121,9 @@ Si todo va bien, la pieza se irá formando
 1. Volvemos a poner los tornillos y ajustamos la presión.
 1. Movemos la rueda del extrusor para ver que el filamento fluye.
 
-[Vídeo: Cambio de filamento impresora Prusa i3](https://youtu.be/_YotEtusTyI)
-
 [![Vídeo: Cambio de filamento impresora Prusa i3](https://img.youtube.com/vi/_YotEtusTyI/0.jpg)](https://youtu.be/_YotEtusTyI)
 
+[Vídeo: Cambio de filamento impresora Prusa i3](https://youtu.be/_YotEtusTyI)
 
 ### Adherencia a la placa
 
@@ -137,6 +142,8 @@ Para transportar la impresora,  lo mejor es cogerla por la parte superior del ma
 Si hacemos un transporte en el que lleva bastante tiempo en coche hola estamos moviendo por un sitio que hay muchos botes muchos baches y que convendría hacerle una recalibración.
 
 ## Resolución de problemas
+
+Vamos a ver algunos de los más frecuentes.
 
 ### Atascos
 
