--- a/5.2.Uso_creality3.md
+++ b/5.2.Uso_creality3.md
@@ -1,5 +1,7 @@
 ## Impresora Creality Ender V2
 
+Vamos a particularizar lo que hemos visto para la impresora Creality Ender V2.
+
 ### Encendido, uso de menús y autohome
 
 Empezamos encendiéndola, damos un repaso por los menús más utilizados y hacemos y autohome
@@ -9,15 +11,9 @@ Empezamos encendiéndola, damos un repaso por los menús más utilizados y hacem
 [Vídeo: 6.1. Encendido, uso de menús y autohome](https://youtu.be/xamx6i5YIqU)
 
 
-### Calibración de la cama y el eje Z
+### Calibración de la base y el eje Z
 
-La calibración es un proceso que haremos con cierta frecuencia y que nos permite ajustar la altura la que la impresora imprime su primera capa, de que esta capa esté bien adherida a la base dependerá que la pieza no se mueva a lo largo de toda la impresión.
-
-Es algo que tenemos que hacer de vez en cuando y sobre todo cuando veamos que la primera capa no está todo lo perfecta que debería.
-
-Para hacerlo sólo necesitamos una hoja de papel. 
-
-Ajustaremos la separación entre la boquilla del extrusor y la base para que podamos mover el papel pero notando un poco de resistencia.
+Lo haremos como hemos visto, con una hoja de papel y ajustando la separación entre la boquilla del extrusor y la base para que podamos mover el papel pero notando un poco de resistencia.
 
 Como repetiremos el proceso en las cuatro esquinas, necesitamos que los motores estén librerados (Disable steppers).
 
@@ -39,10 +35,11 @@ Vamos a ver cómo precalentar la impresora (según el tipo de filamento que vaya
 ### Colocación del filamento
 
 Vamos a aprender a colocar el filamento:
+
 1. Debemos tener los motores liberados (Disable steppers)
 1. Precalentamos la impresora
 1. Cortamos la punta en un ángulo de 45º para facilitar que pase por todos los agujeros
-1. Presionamos la pinza del extrusor para liberar el engraje
+1. Presionamos la pinza del extrusor para liberar el engranaje
 1. Introducimos el filamento hasta que entre en el tubo blanco (PTFE)
 1. Vamos girando la rueda azul del extrusor hasta que el filamento salga por la boquilla
 
