--- a/5.3.Uso_Kingroom_kp3s.md
+++ b/5.3.Uso_Kingroom_kp3s.md
@@ -1,5 +1,6 @@
 ## Impresora Kingroon KP3S
 
+La mayoría de los procesos son muy similares a los vistos anteriormente.
 
 ## Calibración
 
@@ -11,7 +12,7 @@ En la imagen se puede ver una distancias excesiva
 
 ![Distancia excesiva EjeZ](./images/DistanciaEjeZ.png)
 
-Para reducirla ajustamos con el tornillo del eje Z   que ajusta el punto en el que el motor Z se para al tocar el final del carrera del eje Z
+Para reducirla ajustamos con el tornillo del eje Z   que ajusta el punto en el que el motor Z se para al tocar el final de carrera del eje Z
 
 ![Nivelación eje Z](./images/BotonT.png)
 
@@ -28,11 +29,15 @@ Vamos haciendo Home del eje Z desde la opción "Homming" del menú, hasta que la
 
 ### Configuración de Ultimaker Cura
 
+Vamos a ver cómo configura Ultimaker Cura para imprimir con la impresora Kingroon KP3s:
+
 [![Vídeo: Configuración de Ultimaker  Cura  para la impresora 3D Kingroon KP3s](https://img.youtube.com/vi/svuQmR8ayqE/0.jpg)](https://youtu.be/svuQmR8ayqE)
 
 [Vídeo: Configuración de Ultimaker  Cura  para la impresora 3D Kingroon KP3s](https://youtu.be/svuQmR8ayqE)
 
 ### Configuración de Prusa Slicer
+
+Vamos a ver cómo configura Prusa Slicer para imprimir con la impresora Kingroon KP3s:
 
 [![Vídeo: Configuración de PrusaSlicer para Impresora 3D Kingroon KP3s](https://img.youtube.com/vi/_o9P8IFTHUI/0.jpg)](https://youtu.be/_o9P8IFTHUI)
 
@@ -40,6 +45,8 @@ Vamos haciendo Home del eje Z desde la opción "Homming" del menú, hasta que la
 
 
 ## Menú de uso
+
+Los menús son muy similares a los ya vistos:
 
 [![Vídeo: Menú de la impresora 3D Kingroon KP3S](https://img.youtube.com/vi/0mlIJfO5uq0/0.jpg)](https://youtu.be/0mlIJfO5uq0)
 
@@ -52,36 +59,4 @@ La impresora dispone de una superficie magnética que mejora la adherencia al mi
 [![Vídeo: Despegando una pieza impresa en Kingroon KP3s](https://img.youtube.com/vi/qTbd1WMmKlg/0.jpg)](https://youtu.be/qTbd1WMmKlg)
 
 [Vídeo: Despegando una pieza impresa en Kingroon KP3s](https://youtu.be/qTbd1WMmKlg)
-
-
-
-
-
-## Mejoras
-
-[![Vídeo: Mejoras a la impresora 3D Kingroon KP3s](https://img.youtube.com/vi/4o_p7YZYxN8/0.jpg)](https://youtu.be/4o_p7YZYxN8)
-
-
-[Vídeo: Mejoras a la impresora 3D Kingroon KP3s](https://youtu.be/4o_p7YZYxN8)
-
-
-[Soporte fuente](https://www.thingiverse.com/thing:4740318)
-
-![](https://cdn.thingiverse.com/assets/ba/b2/58/2c/7d/featured_preview_photo_2021-01-28_02-53-48.jpg)
-
-[Soporte fuente de alimentación vertical](https://www.thingiverse.com/thing:4671163)
-
-![](https://cdn.thingiverse.com/assets/ab/22/14/3d/0a/featured_preview_IMG_1407-min.jpg)
-
-[Portarollo sobre la fuente de alimentación](https://www.thingiverse.com/thing:4611818)
-
-![](https://cdn.thingiverse.com/assets/10/e7/e0/44/15/featured_preview_Screenshot_20201001-113713.jpg)
-
-[Portarollo sobre el eje Z](https://www.thingiverse.com/thing:4600120)
-
-![](https://cdn.thingiverse.com/assets/19/d0/1c/99/cc/featured_preview_Screenshot_20200919-171553__01.jpg)
-
-[Portarollos sobre el eje Z](https://www.thingiverse.com/thing:4783450)
-
-![](https://cdn.thingiverse.com/assets/9b/c8/0b/81/17/featured_preview_Kingroon_KP3S_soporte_rolo_en_Z.jpg)
 
