--- a/7.limpieza.md
+++ b/7.limpieza.md
@@ -1,1 +1,5 @@
 limpieza del exterior de la boquilla en caliente y usando un cepillo metálico pero de cerdas finas. Personalmente uso estropajo metálico doméstico de tipo "nanas"
+
+![limpiezaBoquilla1.jpg](./images/limpiezaBoquilla1.jpg)
+
+![IlimpiezaBoquilla2.jpg](./images/IlimpiezaBoquilla2.jpg)
