--- a/5.0.0.UsoImpresoras3D.md
+++ b/5.0.0.UsoImpresoras3D.md
@@ -39,7 +39,7 @@ También hay opciones que se activan mientras imprimimos:
     * **Temperatura**, tanto de la base como del extrusor:
     ![Cambio de temperatura durante la impresión](./images/OpcionesDuranteImpresionTemperatura.jpg)
     * **Velocidad** (speed), que nos permite acelerar los movimientos de la impresora.
-    * **Flujo** (flow) es un % que indica la cantidad de filamento que se deposita. Si es mayor que 100 veremos que se deposita más filamento y al contrario, si es menor que 100 se depositará una cantidad menor.
+    * **Flujo** (flow) es un % que indica la cantidad de filamento que se deposita. Si es mayor que 100 veremos que se deposita más filamento y al contrario, si es menor que 100 se deposita una cantidad menor.
     Si tenemos que ajustar este parámetros es que o bien tenemos un problema de atasco o hemos configurado mal la impresión.
 
 ## Calibración de la base y el eje Z
