--- a/5.1.Uso_i3.md
+++ b/5.1.Uso_i3.md
@@ -19,16 +19,16 @@ Para comprobarlo hacemos lo siguiente:
 
 ![Ajustando la nivelación del eje Z](./images/NivelandoZ_2.png)
 
-[![Vídeo: Calibración eje Z de una impresora Prusa i3](https://img.youtube.com/vi/CARIvKaBPZI/0.jpg)](https://youtu.be/CARIvKaBPZI)
+[![Vídeo: Calibración eje Z de una impresora Prusa i3](https://img.youtube.com/vi/CARIvKaBPZI/0.jpg)](https://drive.google.com/file/d/1aS1MZ_LhK-j0dHINvCfzJxRSlXFm_L9I/view?usp=sharing
 
-[Vídeo: Calibración eje Z de una impresora Prusa i3](https://youtu.be/CARIvKaBPZI)
+[Vídeo: Calibración eje Z de una impresora Prusa i3](https://drive.google.com/file/d/1aS1MZ_LhK-j0dHINvCfzJxRSlXFm_L9I/view?usp=sharing)
 
-* Si vemos que el ajuste es mejor en algunas de las esquina, podemos ajustarlas individualmente.
+* Si vemos que el ajuste es mejor en algunas de las esquinas, podemos ajustarlas individualmente.
 * Un caso especial es cuando vemos que es el eje X, donde está el extrusor el que está inclinado. Esto ocurre por el uso o por un golpe o por diferencias entre los motores del eje Z. En este caso, con la impresora apagada, podemos hacer girar los motores del eje z manualmente.
 
-[![Vídeo: Ajuste de la nivelación del Eje X de una impresora 3D](https://img.youtube.com/vi/WTcrb49kiZE/0.jpg)](https://youtu.be/WTcrb49kiZE)
+[![Vídeo: Ajuste de la nivelación del Eje X de una impresora 3D](https://img.youtube.com/vi/WTcrb49kiZE/0.jpg)](https://drive.google.com/file/d/1hdoaiAw9J7qbV0AeS2yqRSdhrLy2Ouyj/view?usp=sharing)
 
-[Vídeo: Ajuste de la nivelación del Eje X de una impresora 3D](https://youtu.be/WTcrb49kiZE)
+[Vídeo: Ajuste de la nivelación del Eje X de una impresora 3D](https://drive.google.com/file/d/1hdoaiAw9J7qbV0AeS2yqRSdhrLy2Ouyj/view?usp=sharing)
 
 
 ## Menús de la impresora
@@ -45,9 +45,9 @@ Tenemos los siguientes menús:
 * Control: configuración de la impresora
 * Menú SD: para seleccionar lo que queremos imprimir
 
-[![Vídeo: Menú de las impresoras Prusa i3 (marlin)](https://img.youtube.com/vi/0hkw0U7VBW0/0.jpg)](https://youtu.be/0hkw0U7VBW0)
+[![Vídeo: Menú de las impresoras Prusa i3 (marlin)](https://img.youtube.com/vi/0hkw0U7VBW0/0.jpg)](https://drive.google.com/file/d/1KXyxlH83L3mQCmyTu7MTxeaeZCdLO2pE/view?usp=sharing)
 
-[Vídeo: Menú de las impresoras Prusa i3 (marlin)](https://youtu.be/0hkw0U7VBW0)
+[Vídeo: Menú de las impresoras Prusa i3 (marlin)](https://drive.google.com/file/d/1KXyxlH83L3mQCmyTu7MTxeaeZCdLO2pE/view?usp=sharing)
 
 
 ## Configuración de Ultimaker Cura para Prusa i3
@@ -65,10 +65,10 @@ Para configurar Cura haremos como cuando no está nuestro modelo de impresora:
 ![Configuramos los parámetros del extrusor](./images/Configi3ExtrusorCura.png)
 
 
-[![Vídeo: Configuración del laminador Ultimaker Cura para impresora Prusa i3](https://img.youtube.com/vi/_EcSV2h06xU/0.jpg)](https://youtu.be/_EcSV2h06xU)
+[![Vídeo: Configuración del laminador Ultimaker Cura para impresora Prusa i3](https://img.youtube.com/vi/_EcSV2h06xU/0.jpg)](https://drive.google.com/file/d/1YI5kZu9cMVhiNSxFTa-ahqYI6PfHqR11/view?usp=sharing)
 
 
-[Vídeo: Configuración del laminador Ultimaker Cura para impresora Prusa i3](https://youtu.be/_EcSV2h06xU)
+[Vídeo: Configuración del laminador Ultimaker Cura para impresora Prusa i3](https://drive.google.com/file/d/1YI5kZu9cMVhiNSxFTa-ahqYI6PfHqR11/view?usp=sharing)
 
 ## Imprimiendo
 
@@ -89,22 +89,22 @@ Ya tenemos todo listo para imprimir, sólo tenemos que:
 * Ponemos la tarjeta SD en la impresora
 * Desde el menú Tarjeta SD seleccionamos el fichero a imprimir
 
-[![Vídeo: Primera impresión 3D](https://img.youtube.com/vi/Y-zoJGRWiu8/0.jpg)](https://youtu.be/Y-zoJGRWiu8)
+[![Vídeo: Primera impresión 3D](https://img.youtube.com/vi/Y-zoJGRWiu8/0.jpg)](https://drive.google.com/file/d/1ztGjMEmhPzFBuUmf5Ndr-q9rQk-kRdwm/view?usp=sharing)
 
-[Vídeo: Primera impresión 3D](https://youtu.be/Y-zoJGRWiu8)
+[Vídeo: Primera impresión 3D](https://drive.google.com/file/d/1ztGjMEmhPzFBuUmf5Ndr-q9rQk-kRdwm/view?usp=sharing)
 
 Durante el proceso de impresión podemos modificar algunos parámetros y también podemos pausarlo o detenerlo definitivamente.
 
-[![Vídeo: Opciones de menú  durante la impresión (Prusa i3 Marlin)](https://img.youtube.com/vi/RRnPeZw8GHQ/0.jpg)](https://youtu.be/RRnPeZw8GHQ)
+[![Vídeo: Opciones de menú  durante la impresión (Prusa i3 Marlin)](https://img.youtube.com/vi/RRnPeZw8GHQ/0.jpg)](https://drive.google.com/file/d/11eAYBx6ajirKTMayUV_MHDQaf65Nx1fF/view?usp=sharing)
 
-[Vídeo: Opciones de menú  durante la impresión (Prusa i3 Marlin)](https://youtu.be/RRnPeZw8GHQ)
+[Vídeo: Opciones de menú  durante la impresión (Prusa i3 Marlin)](https://drive.google.com/file/d/11eAYBx6ajirKTMayUV_MHDQaf65Nx1fF/view?usp=sharing)
 
 
 Si todo va bien, la pieza se irá formando
 
-[![Vídeo: Imprimiendo](https://img.youtube.com/vi/oqyA0dr9AOY/0.jpg)](https://youtu.be/oqyA0dr9AOY)
+[![Vídeo: Imprimiendo](https://img.youtube.com/vi/oqyA0dr9AOY/0.jpg)](https://drive.google.com/file/d/1P8GpwKp4btxu2TcGBAl80A_R6lnMWEK7/view?usp=sharing)
 
-[Vídeo: Imprimiendo](https://youtu.be/oqyA0dr9AOY)
+[Vídeo: Imprimiendo](https://drive.google.com/file/d/1P8GpwKp4btxu2TcGBAl80A_R6lnMWEK7/view?usp=sharing)
 
 ![Cubo de calibración](./images/Cubo3D_s.jpg)
 
@@ -121,9 +121,9 @@ El procedimiento es bastante estándar:
 1. Volvemos a poner los tornillos y ajustamos la presión.
 1. Movemos la rueda del extrusor para ver que el filamento fluye.
 
-[![Vídeo: Cambio de filamento impresora Prusa i3](https://img.youtube.com/vi/_YotEtusTyI/0.jpg)](https://youtu.be/_YotEtusTyI)
+[![Vídeo: Cambio de filamento impresora Prusa i3](https://img.youtube.com/vi/_YotEtusTyI/0.jpg)](https://drive.google.com/file/d/1Iwclf34BvFaDn8aw9BqJuZZHvk7NSwyw/view?usp=sharing)
 
-[Vídeo: Cambio de filamento impresora Prusa i3](https://youtu.be/_YotEtusTyI)
+[Vídeo: Cambio de filamento impresora Prusa i3](https://drive.google.com/file/d/1Iwclf34BvFaDn8aw9BqJuZZHvk7NSwyw/view?usp=sharing)
 
 ### Adherencia a la placa
 
@@ -131,9 +131,9 @@ Podemos añadir laca al cristal de la impresora para mejorar la adherencia, no e
 
 A medida que la vayamos usando esa capa habrá que limpiarla pues puede llegar a ensuciar la base de las piezas, sobre todo si son oscuras.
 
-[![Vídeo: Mejorando la adherencia de la base de cristal usando laca](https://img.youtube.com/vi/6aUJHRHIriw/0.jpg)](https://youtu.be/6aUJHRHIriw)
+[![Vídeo: Mejorando la adherencia de la base de cristal usando laca](https://img.youtube.com/vi/6aUJHRHIriw/0.jpg)](https://drive.google.com/file/d/1H12kx0T3WUeSj0Q8LaNFslAUjGHGRzZj/view?usp=sharing)
 
-[Vídeo: Mejorando la adherencia de la base de cristal usando laca](https://youtu.be/6aUJHRHIriw)
+[Vídeo: Mejorando la adherencia de la base de cristal usando laca](https://drive.google.com/file/d/1H12kx0T3WUeSj0Q8LaNFslAUjGHGRzZj/view?usp=sharing)
 
 ## Cómo transportar la impresora
 
@@ -156,9 +156,9 @@ Normalmente un atasco se produce porque se queda un resto de filamento en la par
 1. Si no podemos limpiarlo podemos introducir un elemento metálico pero del grosor del plástico
 1. En caso de que siga sin liberarse habría que desmontar el extrusor y hacer una limpieza a fondo.
 
-[![Vídeo: Limpiando un atasco en el extrusor](https://img.youtube.com/vi/T14vIGLGUKA/0.jpg)](https://youtu.be/T14vIGLGUKA)
+[![Vídeo: Limpiando un atasco en el extrusor](https://img.youtube.com/vi/T14vIGLGUKA/0.jpg)](https://drive.google.com/file/d/1zHWpmBLXWb0npZbdsPAwD9CHN5-iAS-e/view?usp=sharing)
 
-[Vídeo: Limpiando un atasco en el extrusor](https://youtu.be/T14vIGLGUKA)
+[Vídeo: Limpiando un atasco en el extrusor](https://drive.google.com/file/d/1zHWpmBLXWb0npZbdsPAwD9CHN5-iAS-e/view?usp=sharing)
 
 ## Símbolo raros en la pantalla 
 
