--- a/5.2.Uso_creality3.md
+++ b/5.2.Uso_creality3.md
@@ -6,9 +6,9 @@ Vamos a particularizar lo que hemos visto para la impresora Creality Ender V2.
 
 Empezamos encendiéndola, damos un repaso por los menús más utilizados y hacemos y autohome
 
-[![Vídeo: 6.1. Encendido, uso de menús y autohome](https://img.youtube.com/vi/xamx6i5YIqU/0.jpg)](https://youtu.be/xamx6i5YIqU)
+[![Vídeo: Encendido, uso de menús y autohome](https://img.youtube.com/vi/xamx6i5YIqU/0.jpg)](https://drive.google.com/file/d/1ep0zvXUcaxxwfVF7WIDqD-R_HwyELLLm/view?usp=sharing)
 
-[Vídeo: 6.1. Encendido, uso de menús y autohome](https://youtu.be/xamx6i5YIqU)
+[Vídeo: 6.1. Encendido, uso de menús y autohome](https://drive.google.com/file/d/1ep0zvXUcaxxwfVF7WIDqD-R_HwyELLLm/view?usp=sharing)
 
 
 ### Calibración de la base y el eje Z
@@ -19,17 +19,17 @@ Como repetiremos el proceso en las cuatro esquinas, necesitamos que los motores 
 
 Tendremos que calibrar la impresora siempre que llevemos mucho tiempo sin usar la impresora o que la transportemos en coche.
 
-[![Vídeo: 6.4. Calibración de la cama y el eje Z](https://img.youtube.com/vi/Yifxcl4-nkY/0.jpg)](https://youtu.be/Yifxcl4-nkY)
+[![Vídeo: Calibración de la cama y el eje Z](https://img.youtube.com/vi/Yifxcl4-nkY/0.jpg)](https://drive.google.com/file/d/1yJivxPMlpv0z39_h_ulgb6DtjnoNj2FO/view?usp=sharing)
 
-[Vídeo: 6.4. Calibración de la cama y el eje Z](https://youtu.be/Yifxcl4-nkY)
+[Vídeo: Calibración de la cama y el eje Z](https://drive.google.com/file/d/1yJivxPMlpv0z39_h_ulgb6DtjnoNj2FO/view?usp=sharing)
 
 ### Prueba de temperatura y calentamiento
 
 Vamos a ver cómo precalentar la impresora (según el tipo de filamento que vayamos a usar) y cómo saber la temperatura a la que está en cada momento.
 
-[![Vídeo: 6.5. Prueba de temperatura y calentamiento de la impresora](https://img.youtube.com/vi/F7Vl42sI460/0.jpg)](https://youtu.be/F7Vl42sI460)
+[![Vídeo: Prueba de temperatura y calentamiento de la impresora](https://img.youtube.com/vi/F7Vl42sI460/0.jpg)](https://drive.google.com/file/d/1E4_TD4arJ8jmtr59Xt1dbNSGCHDkKJQ_/view?usp=sharing)
 
-[Vídeo: 6.5. Prueba de temperatura y calentamiento de la impresora](https://youtu.be/F7Vl42sI460)
+[Vídeo: Prueba de temperatura y calentamiento de la impresora](https://drive.google.com/file/d/1E4_TD4arJ8jmtr59Xt1dbNSGCHDkKJQ_/view?usp=sharing)
 
 
 ### Colocación del filamento
@@ -43,9 +43,9 @@ Vamos a aprender a colocar el filamento:
 1. Introducimos el filamento hasta que entre en el tubo blanco (PTFE)
 1. Vamos girando la rueda azul del extrusor hasta que el filamento salga por la boquilla
 
-[![Vídeo: 6.6. Poniendo el filamento ](https://img.youtube.com/vi/ZJV_d4eVw2o/0.jpg)](https://youtu.be/ZJV_d4eVw2o)
+[![Vídeo: Poniendo el filamento ](https://img.youtube.com/vi/ZJV_d4eVw2o/0.jpg)](https://drive.google.com/file/d/1G6CxOyFQ2OLzBidb-MigyHwXIubAYqxq/view?usp=sharing)
 
-[Vídeo: 6.6. Poniendo el filamento](https://youtu.be/ZJV_d4eVw2o)
+[Vídeo: Poniendo el filamento](https://drive.google.com/file/d/1G6CxOyFQ2OLzBidb-MigyHwXIubAYqxq/view?usp=sharing)
 
 
 ### Primera impresión
@@ -55,15 +55,15 @@ Vamos a aprender a colocar el filamento:
 1. Seleccionamos el fichero de la tarjeta SD que ya hemos colocado en la impresora
 1. Si queremos modificar alguna de las características, podemos hacerlo desde el menú "Control"
 
-[![Vídeo: 6.7  Primera impresión](https://img.youtube.com/vi/CZn_CMLIUxs/0.jpg)](https://youtu.be/CZn_CMLIUxs)
+[![Vídeo: Primera impresión](https://img.youtube.com/vi/CZn_CMLIUxs/0.jpg)](https://drive.google.com/file/d/10uBYdVzcYpVnMiZmvbVIoQdk8pTPAhrM/view?usp=sharing)
 
-[Vídeo: 6.7  Primera impresión](https://youtu.be/CZn_CMLIUxs)
+[Vídeo: Primera impresión](https://drive.google.com/file/d/10uBYdVzcYpVnMiZmvbVIoQdk8pTPAhrM/view?usp=sharing)
 
 ### Cambio filamento
 
 Algo muy frecuente es cambiar de filamento, bien porque queremos usar otro o bien porque se agota los pasos a seguir son los siguientes
 
-1. PreCalentamos la impresora con el tipo de filamento que tenemos puesto en ese momento.
+1. Precalentamos la impresora con el tipo de filamento que tenemos puesto en ese momento.
 1. Desde la opción "Control" subimos la temperatura del filamento unos 10-15 grados para hacer que se funda con más facilidad.
 1. Cuando ya tengamos la temperatura adecuada, movemos la rueda del extrusor para sacar un poco de filamento por la boquilla
 1. Ahora movemos la rueda en sentido contrario para retirar el filamento.
@@ -75,8 +75,8 @@ Algo muy frecuente es cambiar de filamento, bien porque queremos usar otro o bie
 1. Veremos que al principio sale un poco del filamento antiguo incluso mezcla de los dos.
 1. Seguros girando la rueda del extrusor hasta que salga el nuevo filamento completamente limpio.
 
-[![Vídeo: 6.8  Cambio de filamento en una impresora 3D](https://img.youtube.com/vi/dhYjlLPN9rw/0.jpg)](https://youtu.be/dhYjlLPN9rw)
+[![Vídeo: Cambio de filamento en una impresora 3D](https://img.youtube.com/vi/dhYjlLPN9rw/0.jpg)](https://drive.google.com/file/d/1Gf8dE6jJZdFUzvp_1Q-BA9gLITG1CW2E/view?usp=sharing)
 
 
-[Vídeo: 6.8  Cambio de filamento en una impresora 3D](https://youtu.be/dhYjlLPN9rw)
+[Vídeo: Cambio de filamento en una impresora 3D](https://drive.google.com/file/d/1Gf8dE6jJZdFUzvp_1Q-BA9gLITG1CW2E/view?usp=sharing)
 
