--- a/5.3.Uso_Kingroom_kp3s.md
+++ b/5.3.Uso_Kingroom_kp3s.md
@@ -22,41 +22,41 @@ Vamos haciendo Home del eje Z desde la opción "Homming" del menú, hasta que la
 
 2. Una vez lo hemos acercado vamos a comprobar el nivelado de la base, para ello entramos en menú "Leveling", donde iremos comprobando el ajuste de la altura de la boquilla en cada uno de los 5 puntos, ajustándolo con las ruedas de cada esquina.
 
-[![Vídeo: Calibrado del eje Z de la impresora Kingroon  KP3s ](https://img.youtube.com/vi/W9fHBA8sDYU/0.jpg)](https://youtu.be/W9fHBA8sDYU)
+[![Vídeo: Calibrado del eje Z de la impresora Kingroon  KP3s ](https://img.youtube.com/vi/W9fHBA8sDYU/0.jpg)](https://drive.google.com/file/d/1vumkK_Df3VaNWQpfOwtFUVWTrhMTr-2l/view?usp=sharing)
 
-[Vídeo: Calibrado del eje Z de la impresora Kingroon  KP3s](https://youtu.be/W9fHBA8sDYU)
+[Vídeo: Calibrado del eje Z de la impresora Kingroon  KP3s](https://drive.google.com/file/d/1vumkK_Df3VaNWQpfOwtFUVWTrhMTr-2l/view?usp=sharing)
 
 
 ### Configuración de Ultimaker Cura
 
 Vamos a ver cómo configura Ultimaker Cura para imprimir con la impresora Kingroon KP3s:
 
-[![Vídeo: Configuración de Ultimaker  Cura  para la impresora 3D Kingroon KP3s](https://img.youtube.com/vi/svuQmR8ayqE/0.jpg)](https://youtu.be/svuQmR8ayqE)
+[![Vídeo: Configuración de Ultimaker  Cura  para la impresora 3D Kingroon KP3s](https://img.youtube.com/vi/svuQmR8ayqE/0.jpg)](https://drive.google.com/file/d/1_Mh5Zao5Dav7BH6iMpcHUUu64nRa36KZ/view?usp=sharing)
 
-[Vídeo: Configuración de Ultimaker  Cura  para la impresora 3D Kingroon KP3s](https://youtu.be/svuQmR8ayqE)
+[Vídeo: Configuración de Ultimaker  Cura  para la impresora 3D Kingroon KP3s](https://drive.google.com/file/d/1_Mh5Zao5Dav7BH6iMpcHUUu64nRa36KZ/view?usp=sharing)
 
 ### Configuración de Prusa Slicer
 
 Vamos a ver cómo configura Prusa Slicer para imprimir con la impresora Kingroon KP3s:
 
-[![Vídeo: Configuración de PrusaSlicer para Impresora 3D Kingroon KP3s](https://img.youtube.com/vi/_o9P8IFTHUI/0.jpg)](https://youtu.be/_o9P8IFTHUI)
+[![Vídeo: Configuración de PrusaSlicer para Impresora 3D Kingroon KP3s](https://img.youtube.com/vi/_o9P8IFTHUI/0.jpg)](https://drive.google.com/file/d/14hKwR6sia-EJs1bd4Sr5P5z6TYrnGyha/view?usp=sharing)
 
-[Vídeo: Configuración de PrusaSlicer para Impresora 3D Kingroon KP3s](https://youtu.be/_o9P8IFTHUI)
+[Vídeo: Configuración de PrusaSlicer para Impresora 3D Kingroon KP3s](https://drive.google.com/file/d/14hKwR6sia-EJs1bd4Sr5P5z6TYrnGyha/view?usp=sharing)
 
 
 ## Menú de uso
 
 Los menús son muy similares a los ya vistos:
 
-[![Vídeo: Menú de la impresora 3D Kingroon KP3S](https://img.youtube.com/vi/0mlIJfO5uq0/0.jpg)](https://youtu.be/0mlIJfO5uq0)
+[![Vídeo: Menú de la impresora 3D Kingroon KP3S](https://img.youtube.com/vi/0mlIJfO5uq0/0.jpg)](https://drive.google.com/file/d/19b-_hEsmeazBruwfBBWW9Ry90ctlZ0ve/view?usp=sharing)
 
-[Vídeo: Menú de la impresora 3D Kingroon KP3S](https://youtu.be/0mlIJfO5uq0)
+[Vídeo: Menú de la impresora 3D Kingroon KP3S](https://drive.google.com/file/d/19b-_hEsmeazBruwfBBWW9Ry90ctlZ0ve/view?usp=sharing)
 
 ### Despegando una pieza
 
 La impresora dispone de una superficie magnética que mejora la adherencia al mismo tiempo que nos facilita el separar las piezas
 
-[![Vídeo: Despegando una pieza impresa en Kingroon KP3s](https://img.youtube.com/vi/qTbd1WMmKlg/0.jpg)](https://youtu.be/qTbd1WMmKlg)
+[![Vídeo: Despegando una pieza impresa en Kingroon KP3s](https://img.youtube.com/vi/qTbd1WMmKlg/0.jpg)](https://drive.google.com/file/d/18wmYLaDudohoZU_lHggpAMbHJmKPV6iU/view?usp=sharing)
 
-[Vídeo: Despegando una pieza impresa en Kingroon KP3s](https://youtu.be/qTbd1WMmKlg)
+[Vídeo: Despegando una pieza impresa en Kingroon KP3s](https://drive.google.com/file/d/18wmYLaDudohoZU_lHggpAMbHJmKPV6iU/view?usp=sharing)
 
