--- a/PublicacionBase/5.Ejercicio.md
+++ b/PublicacionBase/5.Ejercicio.md
@@ -2,5 +2,7 @@
 
 ## Ejercicios
 
+A esta altura supongo que ya tendrás tu impresora 3D. Si es así, imprime alguna pieza y haz fotos del proceso de impresión y del resultado final.
+Si aún no la tienes, piensa qué te gustaría imprimir y lamínala con el software adecuado, configurando para la impresora elegida y adjunta imágenes del proceso.
 
 Escribe tu explicación en un documento aparte y envíalo al profesor
