--- a/6.3.0.ImpresionPieza.md
+++ b/6.3.0.ImpresionPieza.md
@@ -4,8 +4,12 @@
 
 Perímetros primera capa: mucho más planos que las restantes capas para asegurar la adherencia. Si vemos que sale redondita tenemos que recalibrar
 
+1. Capas inferiores
+1. Perímetros
+1. Relleno
+1. Capas superiores
 
-
+Distintas velocidades
 
 
 ![Proceso Impresión pieza: ](./images/3dPieza_2.jpg)
@@ -29,5 +33,4 @@ Terminada la primera capa superior
 
 Segunda capa superior, muy lisita. En este caso habíamos configurado sólo 2 capas superiores
 
-![Proceso Impresión pieza: ](./images/)
 
