--- a/6.0.1.TestCalidad.md
+++ b/6.0.1.TestCalidad.md
@@ -1,19 +1,64 @@
-# Mejoras de calidad
+# Modelos para mejorar la calidad
+
+### Modelos sencillos para testear la calidad
 
 [xyz Cube](https://www.thingiverse.com/thing:1278865)
 
 ![xyz Cube](./images/34dcf6594a055b63bccf0ce58f21f1d3_preview_card.jpg)
 
-[Torre de temperatura](https://www.thingiverse.com/thing:2729076)
 
-![Torre de calibración](./images/567a2bd8967679dce240352282964513_preview_card.jpg)
 
 [3dBenchy](https://www.thingiverse.com/thing:763622)
 
 ![3DBenchy](./images/3DBenchy.jpeg)
 
-## Pruebas
+### Modelos articulados
 
-[Modelos Articulados](https://www.thingiverse.com/thing:2431184)
 
-[Acabados](https://www.thingiverse.com/thing:1458545)
+[Octopus](https://www.thingiverse.com/thing:3495390)
+
+![](./images/octupus.jpg)
+
+[Ankly: Modelo Articulado](https://www.thingiverse.com/thing:2431184)
+
+![](./images/ankly.jpg)
+
+
+
+
+### Modelos para ajustar la calidad
+
+[Torre de temperatura](https://www.thingiverse.com/thing:2729076)
+
+![Torre de calibración](./images/567a2bd8967679dce240352282964513_preview_card.jpg)
+
+
+[Test de expansión horizontal](https://www.thingiverse.com/thing:1662342)
+
+![](./images/Test_expansion_horizontal.jpg)
+
+
+### Test completos
+
+Se suelen llamar test de tortura porque intentan llevar hasta el extremo a las impresoras. Tienen un poco de todo:
+
+* Voladizos
+* Puentes
+* Paredes muy finas
+* Ajustes milimétricos
+
+
+[Test completo](https://www.thingiverse.com/thing:1363023)
+
+![Test completo](./images/TestCompleto.jpg)
+
+[Test completo](https://www.thingiverse.com/thing:2656594)
+
+![Test complejo](./images/TestComplejo1.jpeg)
+
+
+[![Vídeo: Modelos para testear la calidad](https://img.youtube.com/vi/6I6bvXn1ZUw/0.jpg)](https://drive.google.com/file/d/1btSOGQZCiA8Fd1DUBOTFdG3z-HdJys8a/view?usp=sharing)
+
+
+[Vídeo: Modelos para testear la calidad](https://drive.google.com/file/d/1btSOGQZCiA8Fd1DUBOTFdG3z-HdJys8a/view?usp=sharing)
+
