--- a/6.3.1.Modificadores.md
+++ b/6.3.1.Modificadores.md
@@ -1,5 +1,19 @@
 En prusaSlicer o en Cura se pueden añadir modificadores tanto para reforzar el soporte como para quitarlo.
 
+
+[![Vídeo: 6.3.1 Bloqueadores de soporte en Ultimaker Cura](https://img.youtube.com/vi/7IkTQmxss2g/0.jpg)](https://drive.google.com/file/d/1iDEyX1sGsDvi48MMTCf1FYqKZ8INHQ65/view?usp=sharing)
+
+
+[Vídeo: 6.3.1 Bloqueadores de soporte en Ultimaker Cura](https://drive.google.com/file/d/1iDEyX1sGsDvi48MMTCf1FYqKZ8INHQ65/view?usp=sharing)
+
+
+
+[![Vídeo: 6.3.1 Modificadores de soporte en PrusaSlicer: Refuerzo y Bloque de soporte](https://img.youtube.com/vi/wRm0zn3_I90/0.jpg)](https://drive.google.com/file/d/1brWtcqTIYJljr6qRWkTdPFtN0gPSAiib/view?usp=sharing)
+
+
+[Vídeo: 6.3.1 Modificadores de soporte en PrusaSlicer: Refuerzo y Bloque de soporte](https://drive.google.com/file/d/1brWtcqTIYJljr6qRWkTdPFtN0gPSAiib/view?usp=sharing)
+
+
 Ejemplo
 
 https://youtu.be/XeVzP7Q4oIE
