--- a/6.3.2.AjustePiezas.md
+++ b/6.3.2.AjustePiezas.md
@@ -22,3 +22,9 @@ Pata de elefante
 
 ![](./images/calibracionXY.jpg)
 
+
+[![Vídeo 6.3.2 Ajuste preciso del tamaño de las piezas impresas](https://img.youtube.com/vi/BwVWK3U58Sg/0.jpg)](https://drive.google.com/file/d/13N2INAVBdvr5COEcwiM88UvchtBp5-u5/view?usp=sharing)
+
+[Vídeo 6.3.2 Ajuste preciso del tamaño de las piezas impresas](https://drive.google.com/file/d/13N2INAVBdvr5COEcwiM88UvchtBp5-u5/view?usp=sharing)
+
+
