--- a/6.3.3.Multicolor.md
+++ b/6.3.3.Multicolor.md
@@ -1,10 +1,36 @@
 Ejemplo de marvel
 
-Pause at height
 Change filament
+
+
+Pause at height
+
+
+
 Search & replace
 
 Hola Antonio, creo que has conseguido un muy buen resultado. Efectivamente en algunos modelos/versiones no funciona bien lo del cambio de filamento y hay que probar distintas alternativas, ya que has publicado el resultado ¿te animas a publicar un par de capturas de pantallas explicando cómo has usado Search& Replace?
 
 Sobre la mezcla de colores, al ser el rojo tan fuerte por poco que quede en el extrusor tiñe el blanco, por eso hay que extruir una buena cantidad tras hacer el cambio, hasta que veamos que sale blanco 100%, y aún así puede pasar como a tí que quede algún resto en el interior.
 Muy buen trabajo
+
+Pausa
+Comprobamos que la temperatura sea la adecuada
+Sacamos el filamento
+Ponemos la temperatura del nuevo filamento 
+Verificamos si la base se sigue calentando
+Introducimos el filamento
+Purgamos el fusor, para que no queden restos del anterior, haciendo que se extruya suficiente cantidad para que se vea el nuevo color límpiamente.
+Pulsamos la opción de contiuar
+
+
+¡¡CUIDADO!! Las opciones de postprocesado en Cura se quedan aunque cambiemos de pieza
+
+
+En PrusaSlicer...
+
+
+[![Vídeo: 6.3.3 Laminando piezas con cambios de filamento para impresiones multicolor](https://img.youtube.com/vi/hpHaA-ts89w/0.jpg)](https://drive.google.com/file/d/1-aN93x5C3Frgwkc-X4B1nJvS4mTC_YK0/view?usp=sharing)
+
+[Vídeo: 6.3.3 Laminando piezas con cambios de filamento para impresiones multicolor](https://drive.google.com/file/d/1-aN93x5C3Frgwkc-X4B1nJvS4mTC_YK0/view?usp=sharing)
+
