--- a/6.2.Cura_avanzado.md
+++ b/6.2.Cura_avanzado.md
@@ -1,7 +1,17 @@
 ## Más detalles
 
-[Megatutorial Cura](https://of3lia.com/ultimaker-cura/)
+[![Vídeo: 6.2.0 Manipulación de modelos en Ultimaker Cura](https://img.youtube.com/vi/Y8YdmhNVcOY/0.jpg)](https://drive.google.com/file/d/1_98U7YbhLcToIUONu9TcN3wMTFina03z/view?usp=sharing)
 
-[Tutorial sobre Cura de los expertos de bitfab.io](https://bitfab.io/es/blog/tutorial-laminado-cura/)
+[Vídeo: 6.2.0 Manipulación de modelos en Ultimaker Cura](https://drive.google.com/file/d/1_98U7YbhLcToIUONu9TcN3wMTFina03z/view?usp=sharing)
 
-[Mega tutorial](https://formizable.com/mega-tutorial-de-cura-profundizando-en-cura-3d-slicer/)
+
+
+[![Vídeo: 6.2.x Configuración de impresión distinta para varias piezas en una misma impresión ](https://img.youtube.com/vi/9_tk1nKCB0I/0.jpg)](https://drive.google.com/file/d/1MXAai3ipPlVQPDKutCa_4MkmlEzJqD7W/view?usp=sharing)
+
+[Vídeo: 6.2.x Configuración de impresión distinta para varias piezas en una misma impresión](https://drive.google.com/file/d/1MXAai3ipPlVQPDKutCa_4MkmlEzJqD7W/view?usp=sharing)
+
+
+[![Vídeo: 6.2.x Uso de configuración avanzada en Ultimaker Cura](https://img.youtube.com/vi/oFOTMWJwd4k/0.jpg)](https://drive.google.com/file/d/1OWxtLtCngFeWha7PUGAu9fCjg1W7y9sc/view?usp=sharing)
+
+[Vídeo: 6.2.x Uso de configuración avanzada en Ultimaker Cura](https://drive.google.com/file/d/1OWxtLtCngFeWha7PUGAu9fCjg1W7y9sc/view?usp=sharing)
+
